invisible bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,11 @@ p {
   padding-bottom: 0px;
   margin-left: 1px;
   opacity: 1;
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
 }
 
 .project-section .content {
@@ -1656,6 +1661,11 @@ p img {
     -o-box-shadow: 0 0 5px #cccccc;
     box-shadow: 0 0 5px #cccccc;
     right: -400px;
+     -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
   }
 
   #mobile-menu {
